--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-13 12:33:10 -0500 
+%% Created for Jeff Erickson at 2015-08-13 13:04:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -6430,9 +6430,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @book{s-pmad-77,
 	Author = {Dürer, Albrecht},
 	Date-Added = {2012-01-26 13:09:10 +0000},
-	Date-Modified = {2012-01-26 13:37:26 +0000},
+	Date-Modified = {2015-08-13 18:03:23 +0000},
 	Note = {Translated and with a commentary by Walter S. Strauss},
 	Publisher = {Abaris Books},
+	Read = {1},
 	Title = {The Painter's Manual},
 	Year = {1977}}
 
@@ -6440,9 +6441,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Address = {Nuremburg},
 	Author = {Dürer, Albrecht},
 	Date-Added = {2012-01-26 13:04:32 +0000},
-	Date-Modified = {2012-01-26 13:33:25 +0000},
+	Date-Modified = {2015-08-13 18:03:21 +0000},
 	Note = {English translation and commentary in \cite{s-pmad-77}},
 	Publisher = {Hieronymus Formschneyder},
+	Read = {1},
 	Title = {Underweysung der Messung, mit dem Zirckel und Richtscheyt, in Linien ebnen unnd gantzen Corporen},
 	Year = {1525}}
 
