--- a/topology.bib
+++ b/topology.bib
@@ -2,15 +2,94 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-13 13:04:49 -0500 
+%% Created for Jeff Erickson at 2015-08-15 16:33:48 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@article{m-e4fgi2-09,
+	Author = {Manturov, Vassily Olegovich},
+	Comments = {Translated from Russian; details in \cite{m-effgi2-11}},
+	Date-Added = {2015-08-15 21:27:46 +0000},
+	Date-Modified = {2015-08-15 21:28:54 +0000},
+	Journal = {Doklady Math.},
+	Number = {1},
+	Pages = {56--58},
+	Read = {1},
+	Title = {Embeddings of 4-Valent Framed Graphs into 2-Surfaces},
+	Volume = {79},
+	Year = {2009}}
+
+@article{i-f4etg-11,
+	Arxiv = {0911.5504},
+	Author = {Il'yutko, Denis P.},
+	Date-Added = {2015-08-15 20:45:37 +0000},
+	Date-Modified = {2015-08-15 21:22:23 +0000},
+	Journal = {Sbornik: Math.},
+	Number = {9},
+	Pages = {1303--1326},
+	Read = {1},
+	Title = {Framed 4-graphs: {Euler} tours, {Gauss} circuits and rotating circuits},
+	Volume = {202},
+	Year = {2011}}
+
+@article{b-tgs-1849,
+	Author = {Bonnet, [Pierre] Ossian},
+	Date-Added = {2015-08-15 18:58:44 +0000},
+	Date-Modified = {2015-08-15 19:06:29 +0000},
+	Journal = {J. École Polytechnique},
+	Pages = {1--146},
+	Read = {1},
+	Title = {La théorie générale des surfaces},
+	Volume = {32},
+	Year = {1849}}
+
+@article{s-otr-05e,
+	Author = {Siebenmann, Laurent},
+	Date-Added = {2015-08-15 18:54:58 +0000},
+	Date-Modified = {2015-08-15 18:58:36 +0000},
+	Journal = {Russian Math. Surveys},
+	Note = {English translation of \cite{s-otr-05r}},
+	Number = {4},
+	Pages = {645--672},
+	Read = {1},
+	Title = {The {Osgood}-{Schoenflies} theorem revisited},
+	Url = {http://hopf.math.purdue.edu/cgi-bin/generate?/Siebenmann/Schoen-02Sept2005},
+	Volume = {60},
+	Year = {2005}}
+
+@article{s-otr-05r,
+	Author = {Siebenmann, Laurent},
+	Date-Added = {2015-08-15 18:48:32 +0000},
+	Date-Modified = {2015-08-15 19:00:33 +0000},
+	Journal = {Uspekhi Math. Nauk},
+	Note = {In Russian. English translation in \cite{s-otr-05e}.},
+	Number = {4(364)},
+	Pages = {67--96},
+	Read = {1},
+	Title = {The {Osgood}-{Schoenflies} theorem revisited},
+	Url = {http://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=rm&paperid=1445&option_lang=eng},
+	Volume = {60},
+	Year = {2005}}
+
+@book{w-cict-14,
+	Author = {Watson, George Neville},
+	Date-Added = {2015-08-15 18:18:31 +0000},
+	Date-Modified = {2015-08-15 18:23:45 +0000},
+	Number = {15},
+	Publisher = {Cambridge Univ. Press},
+	Read = {1},
+	Series = {Cambridge Tracts in Mathematics and Mathematical Physics},
+	Title = {Complex integration and {Cauchy's} theorem},
+	Year = {1914}}
+
 @article{rs-gm10-91,
 	Author = {Robertson, Neil and Seymour, Paul D.},
+	Date-Modified = {2015-08-15 18:07:40 +0000},
 	Journal = {J. Comb. Theory Ser. B},
-	Keywords = {treewidth and branchwidth},
+	Keywords = {treewidth, branchwidth},
 	Number = {2},
 	Pages = {153--190},
 	Read = {1},
@@ -21,10 +100,11 @@
 @incollection{tsb-cltas-00,
 	Author = {Thilikos, Dimitrios M. and Serna, Maria J. and Bodlaender, Hans L.},
 	Booktitle = {Algorithms and Computation},
+	Date-Modified = {2015-08-15 18:07:25 +0000},
 	Editor = {Goos, Gerhard and Hartmanis, Juris and van Leeuwen, Jan and Lee, D.T. and Teng, Shang-Hua},
 	Note = {Relate carvingwidth to treewidth},
 	Pages = {192--203},
-	Publisher = {Springer Berlin Heidelberg},
+	Publisher = {Springer},
 	Read = {1},
 	Series = {Lecture Notes in Computer Science},
 	Title = {Constructive Linear Time Algorithms for Small Cutwidth and Carving-Width},
@@ -3240,12 +3320,14 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Manturov, Vassily Olegovich},
 	Booktitle = {The Mathematics of Knots: Theory and Application},
 	Chapter = {7},
+	Comments = {Survey},
 	Date-Added = {2012-05-20 19:36:10 +0000},
-	Date-Modified = {2012-05-20 19:55:27 +0000},
+	Date-Modified = {2015-08-15 21:30:08 +0000},
 	Editor = {Banagl, Markus and Vogel, Denis},
 	Number = {1},
 	Pages = {169--197},
 	Publisher = {Springer},
+	Read = {1},
 	Series = {Contrib. Math. Comput. Sci.},
 	Title = {Embeddings of Four-valent Framed Graphs into 2-surfaces},
 	Year = {2011}}
@@ -5351,10 +5433,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1984}}
 
 @incollection{v-ec4gi-81,
-	Author = {Vergnas, M. Las},
+	Author = {Las Vergnas, Michael},
 	Booktitle = {Algebraic methods in graph theory},
 	Date-Added = {2012-03-05 16:55:02 +0000},
-	Date-Modified = {2012-03-05 16:56:06 +0000},
+	Date-Modified = {2015-08-15 19:23:16 +0000},
 	Keywords = {medial graph},
 	Number = {25},
 	Pages = {451--477},
@@ -6828,10 +6910,11 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @book{h-dt-76,
 	Author = {Hirsch, Morris W.},
 	Date-Added = {2012-01-01 13:38:06 +0000},
-	Date-Modified = {2012-01-01 13:41:33 +0000},
+	Date-Modified = {2015-08-15 19:12:28 +0000},
 	Keywords = {red herring},
 	Number = {33},
 	Publisher = {Springer-Verlag},
+	Read = {1},
 	Series = {Graduate Texts in Mathematics},
 	Title = {Differential Topology},
 	Year = {1976}}
@@ -7067,10 +7150,11 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{bbc-ncsclbc-97,
 	Author = {Babson, Eric K. and Billera, Louis J. and Chan, Clara S.},
 	Date-Added = {2011-12-20 15:18:34 +0000},
-	Date-Modified = {2011-12-20 15:19:31 +0000},
+	Date-Modified = {2015-08-15 19:12:04 +0000},
 	Journal = {Israel J. Math.},
 	Number = {1},
 	Pages = {297--315},
+	Read = {1},
 	Title = {Neighborly cubical spheres and a cubical lower bound conjecture},
 	Volume = {102},
 	Year = {1997}}
@@ -7174,11 +7258,12 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Mehlhorn, Kurt and Yap, Chee-Keng},
 	Booktitle = {Proc. Int. Conf. Automata Lang. Progr.},
 	Date-Added = {2011-12-18 21:42:39 +0000},
-	Date-Modified = {2011-12-18 21:44:35 +0000},
+	Date-Modified = {2015-08-15 19:11:51 +0000},
 	Note = {Preliminary version of \cite{my-cwgth-91}},
 	Number = {317},
 	Pages = {410--423},
 	Publisher = {Springer-Verlag},
+	Read = {1},
 	Series = {Lecture Notes Comput. Sci.},
 	Title = {Constructive {Hopf's} theorem: {Or} how to untangle closed planar curves},
 	Year = {1988}}
@@ -7360,9 +7445,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Address = {Stuttgart},
 	Author = {Molland, George},
 	Date-Added = {2011-12-12 10:22:12 +0000},
-	Date-Modified = {2011-12-12 10:35:37 +0000},
+	Date-Modified = {2015-08-15 19:11:19 +0000},
 	Number = {18},
 	Publisher = {Steiner Verlag},
+	Read = {1},
 	Series = {Boethius},
 	Title = {Thomas Bradwardine, Geometria Speculativa: Latin Text and English Translation with an Introduction and Commentary},
 	Year = {1989}}
@@ -7382,8 +7468,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @book{b-gs-1325,
 	Author = {Bradwardine, Thomas},
 	Date-Added = {2011-12-12 09:48:35 +0000},
-	Date-Modified = {2011-12-12 12:15:44 +0000},
+	Date-Modified = {2015-08-15 19:11:20 +0000},
 	Note = {English translation and commentary in \cite{m-tbgsl-89}},
+	Read = {1},
 	Title = {Geometria speculativa},
 	Year = {c. 1325}}
 
@@ -7513,9 +7600,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @phdthesis{b-ucitg-01,
 	Author = {Boy, Werner},
 	Date-Added = {2011-12-07 14:27:41 +0000},
-	Date-Modified = {2011-12-17 19:58:20 +0000},
+	Date-Modified = {2015-08-15 19:11:46 +0000},
 	Keywords = {regular homotopy, Whitney-Graustein},
 	Note = {Cited in \cite{b-ucitg-03}},
+	Read = {1},
 	School = {Univ. Göttingen},
 	Title = {Über die {Curvatura} integra und die {Topologie} geschlossener {Flächen}},
 	Year = {1901}}
@@ -7861,10 +7949,12 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{w-pas-16,
 	Author = {Watson, George Neville},
+	Comments = {Every simple regular closed curve has turning number ±1.},
 	Date-Added = {2011-11-25 12:40:26 +0000},
-	Date-Modified = {2011-11-25 16:20:40 +0000},
+	Date-Modified = {2015-08-15 18:06:43 +0000},
 	Journal = {Proc. London Math. Soc., Ser. 2},
 	Pages = {227--242},
+	Read = {1},
 	Title = {A problem of analysis situs},
 	Volume = {15},
 	Year = {1916}}
@@ -8087,10 +8177,12 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{a-tasrd-04,
 	Author = {Ames, Lewis D.},
+	Comments = {Jordan curve theorem for regular (=piecewise simple C2) curves, also for surfaces},
 	Date-Added = {2011-11-18 06:36:19 +0000},
-	Date-Modified = {2011-11-18 08:28:38 +0000},
+	Date-Modified = {2015-08-15 18:14:59 +0000},
 	Journal = {Bull. Amer. Math. Soc.},
 	Pages = {301--305},
+	Read = {1},
 	Title = {On the theorem of analysis situs relating to the division of the plane or of space by a closed curve or surface},
 	Volume = {10},
 	Year = {1904}}
@@ -11461,9 +11553,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1927}}
 
 @article{ks-tmh-69,
-	Author = {Kirby, Robion and Siebenmann, Laurence C.},
+	Author = {Kirby, Robion and Siebenmann, Laurent C.},
 	Date-Added = {2009-11-22 00:52:46 -0600},
-	Date-Modified = {2012-03-27 13:19:23 +0000},
+	Date-Modified = {2015-08-15 18:53:12 +0000},
 	Journal = {Bull. Amer. Math. Soc.},
 	Pages = {742--749},
 	Read = {1},
@@ -11626,10 +11718,11 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @book{gh-ghmg-90,
 	Date-Added = {2009-11-21 16:40:48 -0600},
-	Date-Modified = {2011-12-18 16:39:39 +0000},
+	Date-Modified = {2015-08-15 19:11:42 +0000},
 	Editor = {Ghys, Étienne and de la Harpe, Pierre},
 	Number = {88},
 	Publisher = {Birkhäuser},
+	Read = {1},
 	Series = {Progress in Mathematics},
 	Title = {Sur les groupes hyperboliques d'après Mikhael Gromov},
 	Year = {1990}}
