--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,46 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-15 16:33:48 -0500 
+%% Created for Jeff Erickson at 2015-08-18 07:02:45 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{r-md-1904,
+	Author = {Russell, Alexander},
+	Booktitle = {A Treatise on the Theory of Alternating Currents},
+	Chapter = {XVII},
+	Date-Added = {2015-08-18 11:59:14 +0000},
+	Date-Modified = {2015-08-18 12:02:37 +0000},
+	Pages = {380--399},
+	Publisher = {Cambridge Univ. Press},
+	Read = {1},
+	Title = {The Method of Duality},
+	Year = {1904}}
+
+@book{r-ttac1-1904,
+	Author = {Russell, Alexander},
+	Date-Added = {2015-08-18 11:56:20 +0000},
+	Date-Modified = {2015-08-18 12:00:52 +0000},
+	Publisher = {Cambridge Univ. Press},
+	Read = {1},
+	Title = {A Treatise on the Theory of Alternating Currents},
+	Volume = {1},
+	Year = {1904}}
+
+@article{cpv-nastc-95,
+	Author = {Colbourn, Charles J. and Provan, J. Scott and Vertigan, Dirk},
+	Comments = {counting spanning trees, perfect matchings, Eulerian subgraphs, and cuts; evaluating energy in the Ising spin glass model; requires arbitrary-precision arithmetic},
+	Date-Added = {2015-08-18 04:19:03 +0000},
+	Date-Modified = {2015-08-18 04:26:46 +0000},
+	Journal = {Discrete Appl. Math.},
+	Pages = {119--129},
+	Read = {1},
+	Title = {A new approach to solving three combinatorial enumeration problems on planar graphs},
+	Volume = {60},
+	Year = {1995}}
 
 @article{m-e4fgi2-09,
 	Author = {Manturov, Vassily Olegovich},
@@ -58,7 +92,8 @@
 	Title = {The {Osgood}-{Schoenflies} theorem revisited},
 	Url = {http://hopf.math.purdue.edu/cgi-bin/generate?/Siebenmann/Schoen-02Sept2005},
 	Volume = {60},
-	Year = {2005}}
+	Year = {2005},
+	Bdsk-Url-1 = {http://hopf.math.purdue.edu/cgi-bin/generate?/Siebenmann/Schoen-02Sept2005}}
 
 @article{s-otr-05r,
 	Author = {Siebenmann, Laurent},
@@ -72,7 +107,8 @@
 	Title = {The {Osgood}-{Schoenflies} theorem revisited},
 	Url = {http://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=rm&paperid=1445&option_lang=eng},
 	Volume = {60},
-	Year = {2005}}
+	Year = {2005},
+	Bdsk-Url-1 = {http://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=rm&paperid=1445&option_lang=eng}}
 
 @book{w-cict-14,
 	Author = {Watson, George Neville},
