--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-18 07:02:45 -0500 
+%% Created for Jeff Erickson at 2015-08-18 10:11:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -8767,9 +8767,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{kqs-tpg-85,
 	Author = {Kennedy, John W. and Quintas, Louis V. and Sysło, Maciej M.},
 	Date-Added = {2011-10-05 09:41:01 +0000},
-	Date-Modified = {2012-03-27 13:16:53 +0000},
+	Date-Modified = {2015-08-18 15:11:49 +0000},
 	Journal = {Historia Math.},
-	Keywords = {Kuratowski Pontrayagin Frink Smith},
+	Keywords = {Kuratowski Pontryagin Frink Smith},
 	Pages = {356--368},
 	Read = {1},
 	Title = {The Theorem on Planar Graphs},
