ΔY reliability references

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,84 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-18 10:11:49 -0500 
+%% Created for Jeff Erickson at 2015-08-18 12:30:13 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{sa-ccfsd-76,
+	Author = {Singh, C. and Asgarpoor, S.},
+	Date-Added = {2015-08-18 17:25:28 +0000},
+	Date-Modified = {2015-08-18 17:28:05 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {5},
+	Pages = {336--339},
+	Read = {1},
+	Title = {Comments on “{Closed} Form Solutions for Delta-Star and Star-Delta Conversion of Reliability Networks”},
+	Volume = {R-25},
+	Year = {1976}}
+
+@article{g-seeus-81,
+	Author = {Gadani, J. P.},
+	Date-Added = {2015-08-18 17:21:15 +0000},
+	Date-Modified = {2015-08-18 17:22:18 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {1},
+	Pages = {43--47},
+	Read = {1},
+	Title = {System Effectiveness Evaluation Using Star and Delta Transformations},
+	Volume = {R-30},
+	Year = {1981}}
+
+@article{sa-refnu-86,
+	Author = {Singh, C. and Asgarpoor, S.},
+	Date-Added = {2015-08-18 17:19:51 +0000},
+	Date-Modified = {2015-08-18 17:25:21 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {4},
+	Pages = {472--477},
+	Read = {1},
+	Title = {Reliability evaluation of flow networks using delta-star transformations},
+	Volume = {R-35},
+	Year = {1986}}
+
+@article{r-ncfsd-78,
+	Author = {Rosenthal, Arnie},
+	Date-Added = {2015-08-18 17:13:10 +0000},
+	Date-Modified = {2015-08-18 17:16:18 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {2},
+	Pages = {110--111},
+	Read = {1},
+	Title = {Note on ‘{Closed} Form Solutions for Delta-Star and Star-Delta Conversion of Reliability Networks’},
+	Volume = {R-27},
+	Year = {1978}}
+
+@article{cfp-daptr-96,
+	Author = {Chari, Manoj K. and Feo, Thomas A. and Provan, J. Scott},
+	Date-Added = {2015-08-18 17:05:28 +0000},
+	Date-Modified = {2015-08-18 17:08:05 +0000},
+	Journal = {Oper. Res.},
+	Number = {5},
+	Pages = {745--757},
+	Read = {1},
+	Title = {The Delta-Wye Approximation Procedure for Two-Terminal Reliability},
+	Volume = {44},
+	Year = {1996}}
+
+@article{zg-effn-07,
+	Author = {Zohar, Ron and Gieger, Dan},
+	Comments = {directed graphs; includes edge reversal; uses Feo-Provan \cite{fp-dtert-93}},
+	Date-Added = {2015-08-18 17:00:59 +0000},
+	Date-Modified = {2015-08-18 17:04:39 +0000},
+	Journal = {Europ. J. Oper. Res.},
+	Pages = {691--706},
+	Read = {1},
+	Title = {Estimation of flows in flow networks},
+	Volume = {176},
+	Year = {2007}}
 
 @incollection{r-md-1904,
 	Author = {Russell, Alexander},
@@ -150,8 +222,9 @@
 @article{rf-tsnrc-77,
 	Author = {Rosenthal, Arnie and Frisque, David E.},
 	Date-Added = {2015-08-13 17:15:02 +0000},
-	Date-Modified = {2015-08-13 17:32:16 +0000},
+	Date-Modified = {2015-08-18 17:24:47 +0000},
 	Journal = {Networks},
+	Note = {Erratum in \emph{Networks} 7(4):382, 1977},
 	Number = {2},
 	Pages = {97--111},
 	Read = {1},
@@ -174,7 +247,7 @@
 @article{g-cdsp-83,
 	Author = {Grosh, Doris Lloyd},
 	Date-Added = {2015-08-13 17:02:23 +0000},
-	Date-Modified = {2015-08-13 17:03:23 +0000},
+	Date-Modified = {2015-08-18 17:30:11 +0000},
 	Journal = {IEEE Trans. Reliability},
 	Number = {4},
 	Pages = {391--394},
