--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,32 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-18 12:30:13 -0500 
+%% Created for Jeff Erickson at 2015-08-18 12:53:17 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{cm-ipen-00,
+	Author = {Curtis, Edward B. and Morrow, James A.},
+	Comments = {medial graphs, pseudoline arrangements},
+	Date-Added = {2015-08-18 17:51:15 +0000},
+	Date-Modified = {2015-08-18 17:52:58 +0000},
+	Publisher = {World Scientific},
+	Read = {1},
+	Title = {Inverse Problems for Electrical Networks},
+	Year = {2000}}
+
+@inproceedings{dm-ftpdw-15,
+	Author = {Demasi, Lino and Mohar, Bojan},
+	Booktitle = {Proc. 26th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2015-08-18 17:36:05 +0000},
+	Date-Modified = {2015-08-18 17:40:36 +0000},
+	Pages = {1728--1742},
+	Read = {1},
+	Title = {Four terminal planar {Delta}-{Wye} reducibility via rooted {$K_{2,4}$} minors},
+	Year = {2015}}
 
 @article{sa-ccfsd-76,
 	Author = {Singh, C. and Asgarpoor, S.},
@@ -904,9 +924,10 @@
 	Author = {Curtis, Edward B. and Morrow, James A.},
 	Comments = {square grids only},
 	Date-Added = {2015-07-08 17:25:57 +0000},
-	Date-Modified = {2015-07-08 17:27:27 +0000},
+	Date-Modified = {2015-08-18 17:43:18 +0000},
 	Journal = {SIAM J. Appl. Math},
 	Pages = {1011--1029},
+	Read = {1},
 	Title = {The {Dirichlet} to {Neumann} map for a resistor network},
 	Volume = {51},
 	Year = {1991}}
@@ -955,8 +976,9 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 
 },
 	Author = {Curtis, Edward B. and Ingerman, David and Morrow, James A.},
+	Comments = {medial graphs},
 	Date-Added = {2015-07-08 17:04:59 +0000},
-	Date-Modified = {2015-07-08 17:29:48 +0000},
+	Date-Modified = {2015-08-18 17:47:10 +0000},
 	Journal = {Linear Alg. Appl.},
 	Number = {1--3},
 	Pages = {115--150},
@@ -1406,8 +1428,9 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @phdthesis{d-rmdt-12,
 	Author = {Demasi, Lino Merrit},
 	Date-Added = {2014-07-12 16:02:31 +0000},
-	Date-Modified = {2014-07-12 16:03:20 +0000},
+	Date-Modified = {2015-08-18 17:36:03 +0000},
 	Month = {October},
+	Read = {1},
 	School = {Dept. Math., Simon Fraser Univ.},
 	Title = {Rooted Minors and Delta-Wye Transformations},
 	Url = {http://summit.sfu.ca/item/12552},
@@ -1433,10 +1456,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1991}}
 
 @article{gs-tdrpg-11,
-	Author = {Gitler, Isidoro and Sagois, Feliú},
+	Author = {Gitler, Isidoro and Sagols, Feliú},
 	Comments = {reduce planar graph with 3 terminals in $O(n^4)$ time},
 	Date-Added = {2014-07-12 15:52:18 +0000},
-	Date-Modified = {2015-08-02 06:31:37 +0000},
+	Date-Modified = {2015-08-18 17:39:32 +0000},
 	Journal = {Networks},
 	Number = {2},
 	Pages = {174--186},
