--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,126 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-18 12:53:17 -0500 
+%% Created for Jeff Erickson at 2015-08-18 17:03:12 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{v-ucvc-81,
+	Author = {Valiant, Leslie S.},
+	Comments = {Any n-vertex planar graph with maximum degree 4 is homeomorphic to a subgraph of an O(n)xO(n) grid.},
+	Date-Added = {2015-08-18 21:58:36 +0000},
+	Date-Modified = {2015-08-18 22:02:35 +0000},
+	Journal = {IEEE Trans. Comput.},
+	Number = {2},
+	Pages = {135--140},
+	Title = {Universality considerations in {VLSI} circuits},
+	Volume = {C-30},
+	Year = {1981}}
+
+@incollection{c-ngicp-93,
+	Author = {{Colin de Verdière}, Yves},
+	Booktitle = {Graph Structure Theory},
+	Comments = {PDF from AMS says "This article is not available due to permission restrictions."},
+	Date-Added = {2015-08-18 21:16:17 +0000},
+	Date-Modified = {2015-08-18 21:30:12 +0000},
+	Editor = {Robertson, Neil and Seymour, Paul},
+	Note = {English translation of \cite{c-nigcp-90} by Neil Calkin},
+	Number = {147},
+	Pages = {137--147},
+	Publisher = {Amer. Math. Soc.},
+	Series = {Contemporary Mathematics},
+	Title = {On a new graph invariant and a criterion for planarity},
+	Year = {1993}}
+
+@article{c-nigcp-90,
+	Author = {{Colin de Verdière}, Yves},
+	Date-Added = {2015-08-18 21:14:50 +0000},
+	Date-Modified = {2015-08-18 21:24:16 +0000},
+	Journal = {J. Comb. Theory Ser. B},
+	Note = {In French, English translation in \cite{c-ngicp-93}},
+	Number = {1},
+	Pages = {11--21},
+	Read = {1},
+	Title = {Sur un nouvel invariant des graphes et un critère de planarité},
+	Volume = {50},
+	Year = {1990}}
+
+@article{bc-mvpte-95,
+	Author = {Bacher, Roland and {Colin de Verdière}, Yves},
+	Date-Added = {2015-08-18 19:28:08 +0000},
+	Date-Modified = {2015-08-18 19:28:55 +0000},
+	Journal = {Bull. Soc. Math. France},
+	Number = {4},
+	Pages = {517--533},
+	Read = {1},
+	Title = {Multiplicités des valeurs propres et transformations étoile-triangle des graphes},
+	Volume = {123},
+	Year = {1995}}
+
+@article{im-ckdnm-98,
+	Author = {Ingermanm, David and Morrow, James},
+	Date-Added = {2015-08-18 18:32:37 +0000},
+	Date-Modified = {2015-08-18 18:44:55 +0000},
+	Journal = {SIAM J. Math. Anal.},
+	Note = {alternating property; continuous analogue of circular planar network stuff},
+	Pages = {106--115},
+	Read = {1},
+	Title = {On a characterization of the kernel of the {Dirichlet}-to-{Neumann} map for a planar region},
+	Volume = {29},
+	Year = {1998}}
+
+@article{i-dcdml-00,
+	Author = {Ingerman, David},
+	Date-Added = {2015-08-18 18:28:12 +0000},
+	Date-Modified = {2015-08-18 18:30:05 +0000},
+	Journal = {SIAM J. Math. Anal.},
+	Number = {6},
+	Pages = {1214--1234},
+	Read = {1},
+	Title = {Discrete and continuous {Dirichlet}-to-{Neumann} maps in the layered case},
+	Volume = {31},
+	Year = {2000}}
+
+@incollection{bdvm-rnaei-12,
+	Author = {Borcea, Liliana and Druskin, Vladimir and Vasquez, Fernando Guevara and Mamonov, Alexander V.},
+	Booktitle = {Inverse Problems and Applications: Inside Out II},
+	Date-Added = {2015-08-18 18:16:00 +0000},
+	Date-Modified = {2015-08-18 18:19:43 +0000},
+	Editor = {Uhlmann, Gunther},
+	Number = {60},
+	Pages = {55--118},
+	Publisher = {Cambridge Univ. Press},
+	Read = {1},
+	Series = {MSRI Publications},
+	Title = {Resistor network approaches to electrical impedance tomography},
+	Year = {2012}}
+
+@article{lp-ipcen-12,
+	Arxiv = {1104.4998},
+	Author = {Lam, Thomas and Pylyavskyy, Pavlo},
+	Date-Added = {2015-08-18 18:06:00 +0000},
+	Date-Modified = {2015-08-18 18:14:35 +0000},
+	Journal = {SIAM J. Appl. Math},
+	Number = {3},
+	Pages = {767--788},
+	Read = {1},
+	Title = {Inverse problem in cylindrical electrical networks},
+	Volume = {72},
+	Year = {2012}}
+
+@unpublished{j-cprnw-12,
+	Arxiv = {1203.4045},
+	Author = {Johnson, Will},
+	Date-Added = {2015-08-18 18:03:13 +0000},
+	Date-Modified = {2015-08-18 18:03:58 +0000},
+	Month = {March},
+	Note = {Preprint},
+	Read = {1},
+	Title = {Circular Planar Resistor Networks with Nonlinear and Signed Conductors},
+	Year = {2012}}
 
 @book{cm-ipen-00,
 	Author = {Curtis, Edward B. and Morrow, James A.},
