Gitler thesis + Truemper book

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-18 17:03:12 -0500 
+%% Created for Jeff Erickson at 2015-08-18 18:13:25 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{t-md-92,
+	Author = {Truemper, Klaus},
+	Date-Added = {2015-08-18 23:10:49 +0000},
+	Date-Modified = {2015-08-18 23:11:24 +0000},
+	Publisher = {Academic Press},
+	Title = {Matroid Decomposition},
+	Year = {1992}}
+
+@phdthesis{f-erpns-85,
+	Author = {Feo, Thomas Aurelio},
+	Date-Added = {2015-08-18 22:41:49 +0000},
+	Date-Modified = {2015-08-18 22:52:29 +0000},
+	School = {Univ. California Berkeley},
+	Title = {{I.} {A} {Lagrangian} Relaxation Method for Testing The Infeasibility of Certain {VLSI} Routing Problems. {II.} {Efficient} Reduction of Planar Networks For Solving Certain Combinatorial Problems},
+	Url = {http://search.proquest.com/docview/303364161},
+	Year = {1985}}
 
 @article{v-ucvc-81,
 	Author = {Valiant, Leslie S.},
