--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,69 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-18 18:13:25 -0500 
+%% Created for Jeff Erickson at 2015-08-19 18:52:59 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kw-bptd-11,
+	Arxiv = {math/0608422},
+	Author = {Kenyon, Richard W. and Wilson, David B.},
+	Date-Added = {2015-08-19 23:45:54 +0000},
+	Date-Modified = {2015-08-19 23:52:59 +0000},
+	Journal = {Trans. Amer. Math. Soc.},
+	Pages = {1325--1364},
+	Read = {1},
+	Title = {Boundary partitions in trees and dimers},
+	Volume = {363},
+	Year = {2011}}
+
+@unpublished{kw-scpn-14,
+	Arxiv = {1411.7425},
+	Author = {Kenyon, Richard W. and Wilson, David B.},
+	Date-Added = {2015-08-19 23:43:00 +0000},
+	Date-Modified = {2015-08-19 23:51:41 +0000},
+	Month = {November},
+	Note = {Preprint},
+	Read = {1},
+	Title = {The space of circuiar planar networks},
+	Year = {2014}}
+
+@unpublished{l-evcse-14,
+	Arxiv = {1402.6261},
+	Author = {Lam, Thomas},
+	Date-Added = {2015-08-19 23:31:43 +0000},
+	Date-Modified = {2015-08-19 23:40:10 +0000},
+	Month = {October},
+	Note = {Preprint},
+	Read = {1},
+	Title = {Electroid varieties and a compactification of the space of electrical networks},
+	Year = {2014}}
+
+@article{lp-ent-15,
+	Arxiv = {1103.3475},
+	Author = {Lam, Thomas and Pylyavskyy, Pavlo},
+	Date-Added = {2015-08-19 23:23:13 +0000},
+	Date-Modified = {2015-08-19 23:40:15 +0000},
+	Journal = {Algebra \& Number Theory},
+	Read = {1},
+	Title = {Electrical networks and {Lie} theory},
+	Year = {to appear}}
+
+@article{h-rns-67,
+	Author = {Hobbs, Arthur M.},
+	Comments = {Akers' flow transformations \cite{a-wtns-60} are incorrect when vertices have finite capacities},
+	Date-Added = {2015-08-19 16:24:07 +0000},
+	Date-Modified = {2015-08-19 16:34:19 +0000},
+	Journal = {Oper. Res.},
+	Number = {3},
+	Pages = {548--551},
+	Read = {1},
+	Title = {Letter to the Editor: {Remarks} on network simplification},
+	Volume = {15},
+	Year = {1967}}
 
 @book{t-md-92,
 	Author = {Truemper, Klaus},
@@ -24,16 +81,18 @@
 	School = {Univ. California Berkeley},
 	Title = {{I.} {A} {Lagrangian} Relaxation Method for Testing The Infeasibility of Certain {VLSI} Routing Problems. {II.} {Efficient} Reduction of Planar Networks For Solving Certain Combinatorial Problems},
 	Url = {http://search.proquest.com/docview/303364161},
-	Year = {1985}}
+	Year = {1985},
+	Bdsk-Url-1 = {http://search.proquest.com/docview/303364161}}
 
 @article{v-ucvc-81,
 	Author = {Valiant, Leslie S.},
 	Comments = {Any n-vertex planar graph with maximum degree 4 is homeomorphic to a subgraph of an O(n)xO(n) grid.},
 	Date-Added = {2015-08-18 21:58:36 +0000},
-	Date-Modified = {2015-08-18 22:02:35 +0000},
+	Date-Modified = {2015-08-19 23:51:49 +0000},
 	Journal = {IEEE Trans. Comput.},
 	Number = {2},
 	Pages = {135--140},
+	Read = {1},
 	Title = {Universality considerations in {VLSI} circuits},
 	Volume = {C-30},
 	Year = {1981}}
@@ -43,12 +102,13 @@
 	Booktitle = {Graph Structure Theory},
 	Comments = {PDF from AMS says "This article is not available due to permission restrictions."},
 	Date-Added = {2015-08-18 21:16:17 +0000},
-	Date-Modified = {2015-08-18 21:30:12 +0000},
+	Date-Modified = {2015-08-19 23:51:51 +0000},
 	Editor = {Robertson, Neil and Seymour, Paul},
 	Note = {English translation of \cite{c-nigcp-90} by Neil Calkin},
 	Number = {147},
 	Pages = {137--147},
 	Publisher = {Amer. Math. Soc.},
+	Read = {1},
 	Series = {Contemporary Mathematics},
 	Title = {On a new graph invariant and a criterion for planarity},
 	Year = {1993}}
