--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-19 18:52:59 -0500 
+%% Created for Jeff Erickson at 2015-08-20 08:59:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{alt-cpene-13,
+	Arxiv = {1309.2697},
+	Author = {Alman, Joshua and Lian, Carl and Tran, Brandon},
+	Date-Added = {2015-08-20 13:54:03 +0000},
+	Date-Modified = {2015-08-20 13:59:11 +0000},
+	Month = {September},
+	Note = {Preprint},
+	Title = {Circular Planar Electrical Networks {I}: {The} Electrical Poset {$EP_{n}$}},
+	Year = {2013}}
+
+@incollection{k-lpggs-11,
+	Arxiv = {1203.1256},
+	Author = {Kenyon, Richard W.},
+	Booktitle = {Current Developments in Mathematics},
+	Date-Added = {2015-08-20 13:26:35 +0000},
+	Date-Modified = {2015-08-20 13:43:29 +0000},
+	Editor = {Jerison, David and Mazur, Barry and Mrowka, Tomasz and Schmid, Wilfred and Stanley, Richard P. and Yau, Shing-Tung},
+	Publisher = {Int. Press},
+	Read = {1},
+	Title = {The {Laplacian} on planar graphs and graphs on surfaces},
+	Year = {2011}}
 
 @article{kw-bptd-11,
 	Arxiv = {math/0608422},
