--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-20 08:59:11 -0500 
+%% Created for Jeff Erickson at 2015-08-20 10:03:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13177,13 +13177,14 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Volume = {62},
 	Year = {1994}}
 
-@article{djgt-hcsegt-99,
+@article{djgt-hcseg-99,
 	Author = {Diestel, Reinhard and Jensen, Tommy R. and Gorbunov, Konstantin Yu. and Thomassen, Carsten},
 	Date-Added = {2009-10-25 13:38:55 -0500},
-	Date-Modified = {2009-10-25 13:39:56 -0500},
+	Date-Modified = {2015-08-20 15:03:29 +0000},
 	Journal = {J. Comb. Theory Ser. B},
 	Number = {1},
 	Pages = {61--73},
+	Read = {1},
 	Title = {Highly Connected Sets and the Excluded Grid Theorem},
 	Volume = {75},
 	Year = {1999}}
