--- a/topology.bib
+++ b/topology.bib
@@ -2,20 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-20 10:03:29 -0500 
+%% Created for Jeff Erickson at 2015-08-21 17:39:51 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@unpublished{alt-cpene-13,
+@book{l-ekt-15,
+	Author = {Lackenby, Marc},
+	Date-Added = {2015-08-20 20:48:45 +0000},
+	Date-Modified = {2015-08-20 20:57:11 +0000},
+	Publisher = {Clay Math. Inst.},
+	Read = {1},
+	Title = {Elementary Knot Theory},
+	Url = {http://people.maths.ox.ac.uk/lackenby/ekt11214.pdf},
+	Year = {to appear},
+	Bdsk-Url-1 = {http://people.maths.ox.ac.uk/lackenby/ekt11214.pdf}}
+
+@article{cl-ubrm-14,
+	Arxiv = {1104.1882},
+	Author = {Coward, Alexander and Lackenby, Marc},
+	Comments = {$2\uparrow^{10^{10^6\, n}} n$},
+	Date-Added = {2015-08-20 20:44:54 +0000},
+	Date-Modified = {2015-08-20 20:57:10 +0000},
+	Journal = {Amer. J. Math.},
+	Number = {4},
+	Pages = {1023--1066},
+	Read = {1},
+	Title = {An upper bound on {Reidemeister} moves},
+	Volume = {136},
+	Year = {2014}}
+
+@article{l-pubrm-15,
+	Arxiv = {1302.0180},
+	Author = {Lackenby, Marc},
+	Comments = {“We prove that any diagram of the unknot with c crossings may be reduced to the trivial diagram using at most (236 c)^11 Reidemeister moves.”},
+	Date-Added = {2015-08-20 20:26:15 +0000},
+	Date-Modified = {2015-08-20 20:44:36 +0000},
+	Journal = {Ann. Math.},
+	Pages = {491--564},
+	Read = {1},
+	Title = {A polynomial upper bound on {Reidemeister} moves},
+	Volume = {182},
+	Year = {2015}}
+
+@misc{alt-cpene-13,
 	Arxiv = {1309.2697},
 	Author = {Alman, Joshua and Lian, Carl and Tran, Brandon},
 	Date-Added = {2015-08-20 13:54:03 +0000},
-	Date-Modified = {2015-08-20 13:59:11 +0000},
+	Date-Modified = {2015-08-20 20:58:12 +0000},
+	Howpublished = {Preprint},
 	Month = {September},
-	Note = {Preprint},
+	Read = {1},
 	Title = {Circular Planar Electrical Networks {I}: {The} Electrical Poset {$EP_{n}$}},
 	Year = {2013}}
 
@@ -43,24 +82,24 @@
 	Volume = {363},
 	Year = {2011}}
 
-@unpublished{kw-scpn-14,
+@misc{kw-scpn-14,
 	Arxiv = {1411.7425},
 	Author = {Kenyon, Richard W. and Wilson, David B.},
 	Date-Added = {2015-08-19 23:43:00 +0000},
-	Date-Modified = {2015-08-19 23:51:41 +0000},
+	Date-Modified = {2015-08-20 20:59:55 +0000},
+	Howpublished = {Preprint},
 	Month = {November},
-	Note = {Preprint},
 	Read = {1},
-	Title = {The space of circuiar planar networks},
+	Title = {The space of circular planar networks},
 	Year = {2014}}
 
-@unpublished{l-evcse-14,
+@misc{l-evcse-14,
 	Arxiv = {1402.6261},
 	Author = {Lam, Thomas},
 	Date-Added = {2015-08-19 23:31:43 +0000},
-	Date-Modified = {2015-08-19 23:40:10 +0000},
+	Date-Modified = {2015-08-20 20:58:39 +0000},
+	Howpublished = {Preprint},
 	Month = {October},
-	Note = {Preprint},
 	Read = {1},
 	Title = {Electroid varieties and a compactification of the space of electrical networks},
 	Year = {2014}}
@@ -99,7 +138,8 @@
 @phdthesis{f-erpns-85,
 	Author = {Feo, Thomas Aurelio},
 	Date-Added = {2015-08-18 22:41:49 +0000},
-	Date-Modified = {2015-08-18 22:52:29 +0000},
+	Date-Modified = {2015-08-21 11:00:04 +0000},
+	Read = {1},
 	School = {Univ. California Berkeley},
 	Title = {{I.} {A} {Lagrangian} Relaxation Method for Testing The Infeasibility of Certain {VLSI} Routing Problems. {II.} {Efficient} Reduction of Planar Networks For Solving Certain Combinatorial Problems},
 	Url = {http://search.proquest.com/docview/303364161},
@@ -211,13 +251,13 @@
 	Volume = {72},
 	Year = {2012}}
 
-@unpublished{j-cprnw-12,
+@misc{j-cprnw-12,
 	Arxiv = {1203.4045},
 	Author = {Johnson, Will},
 	Date-Added = {2015-08-18 18:03:13 +0000},
-	Date-Modified = {2015-08-18 18:03:58 +0000},
+	Date-Modified = {2015-08-20 21:00:12 +0000},
+	Howpublished = {Preprint},
 	Month = {March},
-	Note = {Preprint},
 	Read = {1},
 	Title = {Circular Planar Resistor Networks with Nonlinear and Signed Conductors},
 	Year = {2012}}
@@ -7044,9 +7084,11 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{f-ghi-71,
 	Author = {Francis, George K.},
 	Date-Added = {2012-01-07 21:16:24 +0000},
-	Date-Modified = {2012-01-07 21:17:19 +0000},
+	Date-Modified = {2015-08-21 22:39:51 +0000},
 	Journal = {Indiana Univ Math. J.},
+	Number = {12},
 	Pages = {1101--1112},
+	Read = {1},
 	Title = {Generic homotopies of immersions},
 	Volume = {21},
 	Year = {1971/72}}
